--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,7 +5,7 @@ COPY package.json .
 COPY *.js .
 RUN npm install
 #configuration
-#ENV DB_HOST="mysql"
+ENV DB_HOST="mysql"
 #we are uses docker host network
-ENV DB_HOST="localhost" 
+#ENV DB_HOST="localhost" 
 CMD ["node", "index.js"]
