--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,7 +5,7 @@ volumes:
 services:
 # docker run -d --name mysql --network expense -v mysql:/var/lib/mysql mysql:1.0.0
   mysql:
-    image: mysql;1.0.0
+    image: mysql:1.0.0
     container_name: mysql
     networks:
     - expense
