--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,12 +1,13 @@
-FROM node:20
+#FROM node:20
 FROM node:20.18.3-alpine3.21
+RUN addgroup -S expense && adduser -S expense -G expense
+RUN mkdir /opt/backend
+RUN chown -R expense:expense /opt/backend
 WORKDIR /opt/backend
-#(".") represents corrent directory
 COPY package.json . 
 COPY *.js .
 RUN npm install
 #configuration
 ENV DB_HOST="mysql"
-#we are uses docker host network
 #ENV DB_HOST="localhost" 
 CMD ["node", "index.js"]
