--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,14 +5,14 @@ volumes:
 services:
 # docker run -d --name mysql --network expense -v mysql:/var/lib/mysql mysql:1.0.0
   mysql:
-    image: mysql:1.0.0
+    image: lakshman143/mysql:1.0.0
     container_name: mysql
     networks:
     - expense
     volumes:
     - mysql:/var/lib/mysql
   backend:
-    image: backend:1.0.0
+    image: lakshman143/backend:1.0.0
     command: sh -c "sleep 5 && node /opt/backend/index.js"
     container_name: backend
     networks:
@@ -20,7 +20,7 @@ services:
     depends_on:
     - mysql
   frontend:
-    image: frontend:1.0.0
+    image: lakshman143/frontend:1.0.0
     container_name: frontend
     networks:
     - expense
